Bit of orginised

--- a/index.html
+++ b/index.html
@@ -2,16 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document ok</title>
+    <meta name="author" content="Gazi Masud">
+    <meta name="description" content="This is my first repo">
+    <title>My Travel So Far</title>
+    <link rel="icon" href="favicon/Gazi Masud.png" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/main.css" type="text/css">
 </head>
+
 <body>
-    <h1>I am Overall Ok</h1>
+    <h1>My Travel So Far</h1>
+    <hr>
+    <h2>I came to Korean and I love to read and travel</h2>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus veniam eligendi fugiat harum. Consequatur, dolore iusto? Debitis accusantium quo optio eveniet fugit quidem iure saepe, fuga cupiditate sequi fugiat? Laboriosam?
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis, voluptatum dolore cum expedita hic eos obcaecati beatae cupiditate aliquid quisquam at sed doloremque a, quas ea recusandae porro praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti repellendus maiores distinctio vero error ducimus optio a asperiores dicta libero voluptatibus expedita, quae pariatur voluptatem. Porro consequatur blanditiis animi!
     </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique atque accusamus dolor optio quas nihil, maxime incidunt voluptatibus fugiat ad illum ducimus in dolorum! Autem voluptatum provident adipisci laboriosam error!
+    <hr>
+    <h2>My School Life</h2>
+                              <!--Gazi Masud Image-->
+    <img src="images/Md Masud Gazi. 023.jpeg" alt="this is gazi masud when in school" width="450" height="350">
+
+    <p>I am studying <abbr title="South Korea">SA</abbr> so I enjpying my life.<br>
+        I am enjoying and it's my best life in korean here.
     </p>
+    <hr>
+    <h2>How to contect with me</h2>
+    <h3>My New Address</h3>
+    <address>
+       Banni-Dong, Seoul, Souuth Korea
+    </address>
+    <hr>
+    <h2>My old address</h2>
+    <address>
+        Paragram, Nawabgonj, Dhaka, <abbr title="Bangaladesh">BD</abbr>
+    </address>
+    <hr>
+     <h4>I would like to visit in Future</h4>
+     <dl>
+        <dt><strong>Napal</strong></dt>
+        <dd>I love to see the mountain and so fouth</dd>
+        <dt><strong>Philiphine</strong></dt>
+        <dd>People are very foregin friendly</dd>
+     </dl>
+    <hr>
+    &lt;&lt; &copy; Gazi Masud &gt;&gt;
 </body>
+
 </html>
