--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 <body>
     <h1>My Travel So Far</h1>
     <hr>
+    <nav>
+         <ul>
+            <li>
+                <a href="/index.html">Home</a>
+            </li>
+             <li>
+                <a href="/index.html">Blog</a>
+            </li>
+             <li>
+                <a href="/index.html">About Me</a>
+            </li>
+             <li>
+                <a href="/index.html">Contact Me</a>
+            </li>
+         </ul>
+    </nav>
+    <hr>
     <h2>I came to Korean and I love to read and travel</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis, voluptatum dolore cum expedita hic eos obcaecati beatae cupiditate aliquid quisquam at sed doloremque a, quas ea recusandae porro praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti repellendus maiores distinctio vero error ducimus optio a asperiores dicta libero voluptatibus expedita, quae pariatur voluptatem. Porro consequatur blanditiis animi!
