adding some margin

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <main>
+
     <h1>My Travel So Far</h1>
     <hr>
     <nav>
@@ -24,7 +26,7 @@
                 <a href="/index.html">About Me</a>
             </li>
              <li>
-                <a href="/index.html">Contact Me</a>
+                <a href="contect.html">Contact Me</a>
             </li>
          </ul>
     </nav>
@@ -62,6 +64,7 @@
      </dl>
     <hr>
     &lt;&lt; &copy; Gazi Masud &gt;&gt;
+</main>
 </body>
 
 </html>
